--- a/proyecto2.ipynb
+++ b/proyecto2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,27 +76,26 @@
        "    njev: 114"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Usamos el módulo scipy.optimize para minimizar la función f_electron\n",
-    "from scipy.optimize import minimize\n",
-    "from scipy.optimize import approx_fprime\n",
+    "from minimize import *\n",
     "\n",
     "nprotonLibres = 20\n",
     "np.random.seed(191654)\n",
     "x0 = np.random.rand(3*nprotonLibres)\n",
     "\n",
-    "resultado = minimize(f_electron, x0, method='SLSQP',constraints={'type':'eq', 'fun': h_esfera}, options={'maxiter':400, 'ftol':1e-10})\n",
+    "resultado = minimize_func(f_electron, x0, h_esfera)\n",
     "resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +104,7 @@
        "1.7379860831815912e-11"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
