--- a/Marce/proyecto2.qmd
+++ b/Marce/proyecto2.qmd
@@ -26,6 +26,8 @@ from minimize import *
 # Definimos el número de puntos aleatorios que vamos a organizar
 # en la esfera menos 1 porque en la optimización se fija un punto de los np +1
 # para tener solución única.
+np.random.seed(1916)
+
 num_points_random = 20 # número de puntos que se solicitaron
 
 # Se generan los puntos aleatorios en el espacio para inicializar el método
